--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,19 +3,23 @@ body {
     padding: 0px;
     width: 100%;
     height: 100%;
-    background-image: url("");
     box-sizing: border-box;
+    
 }
 
 .superContainer {
-    background-color: rgba(255,255,255,1);
     width: 100%;
     height: 100%;
+    background-image: url("bglight.jpg");
+}
+
+.topContainer {
+    background-color: rgba(255, 255, 255, 0.8);
+    height: 100vh;
 }
 
 .topTextDiv {
     text-align: center;
-    
     font-family: 'Catamaran', sans-serif;
 }
 
@@ -54,13 +58,9 @@ h1 {
 
 .frontEndDiv {
     margin-top: 5px;
-    background-color: rgba(56, 51, 51, 0.904);
+    background-color: rgba(56, 51, 51, 0.8);
     color: white;
     font-size: 40px;
-}
-
-.fullScreen {
-    height: 100vh;
 }
 
 .aboutTextDiv {
