--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,17 +4,18 @@ body {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    
 }
 
 .superContainer {
     width: 100%;
     height: 100%;
     background-image: url("bglight.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .topContainer {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.85);
     height: 100vh;
 }
 
@@ -46,13 +47,13 @@ h1 {
 }
 
 .firstLineBpt {
-    position: relative;
+    .position: relative;
     margin-top: 10px;
     left: -500vw;
 }
 
 .secondLineBpt {
-    position: relative;
+    .position: relative;
     right: -500vw;
 }
 
