--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,14 +53,21 @@ h1 {
 .aboutTextDiv {
     background-color: rgba(255, 255, 255, 0.85);
     text-align: center;
-    width: 100%;
+    width: 80%;
+    
 }
 
 .frontEndDiv {
     margin-top: 5px;
     background-color: rgba(56, 51, 51, 0.8);
     color: white;
-    font-size: 40px;
+    font-size: 25px;
     margin: 0px;
+}
+
+.frontEndDiv h3{
+    text-align: center; 
+    font-size: 35px;
+    padding: 10px;
 }
 
